[package]
name = "autoSleep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
log = "0.4.14"
log4rs = "1.2.0"
tokio = { version = "1.28.2", features = ["full"] }
[dependencies.evdev]
version = "0.12.1"
features = ["tokio"]